--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Esta app requiere acceso a la cámara para reconocimiento facial y de placas.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Necesitamos acceder al micrófono para permitir búsquedas por voz y añadir productos al carrito.</string>
 </dict>
 </plist>
